2004-09-13  Brian Gough  <bjg@network-theory.co.uk>

	* test.c: added tests for LQ, P^TLQ solvers

	* ptlq.c: added support for PA = LQ decompositions

	* lq.c: added support for A = LQ decompositions

2004-05-30  Brian Gough  <bjg@network-theory.co.uk>

	* test.c (test_LU_solve): increase test tolerance to accommodate
	gcc-3.3.3 w/ bounds checking

2004-05-26  Brian Gough  <bjg@network-theory.co.uk>

	* householder.c (gsl_linalg_householder_hm):
	(gsl_linalg_householder_mh):
	(gsl_linalg_householder_hm1): added blas code (but ifdef'd out)

	* test.c (test_SV_decomp_dim): skip NaNs in test
	(test_SV_decomp_mod_dim): skip NaNs in test

2004-04-26  Brian Gough  <bjg@network-theory.co.uk>

	* test.c (test_TDN_solve): increased tolerance for tests
	(test_TDN_cyc_solve): increased tolerance for tests

2004-03-15  Brian Gough  <bjg@network-theory.co.uk>

	* tridiag.c: (gsl_linalg_solve_symm_tridiag):
	(gsl_linalg_solve_tridiag):
	(gsl_linalg_solve_symm_cyc_tridiag):
	(gsl_linalg_solve_cyc_tridiag): use GSL_ERROR macro to report
	errors, make size restrictions tighter (no unused elements allowed
	to be passed in).

2004-03-06  Brian Gough  <bjg@network-theory.co.uk>

	* test.c (test_SV_decomp_mod_dim): added tests for SV_decomp_mod

	* svd.c (gsl_linalg_SV_decomp): handle the case N=1 (SVD of a
	column vector)
	(gsl_linalg_SV_decomp_mod): handle the case N=1 (SVD of a column
	vector)

2004-03-05  Brian Gough  <bjg@network-theory.co.uk>

	* test.c (test_SV_decomp): add tests with inf/nan

	* svd.c (gsl_linalg_SV_decomp): handle nans in block reduction

	* balance.c: handle infinity/nan when scaling input matrix

2003-07-24  Brian Gough  <bjg@network-theory.co.uk>

	* tridiag.c (solve_cyc_tridiag_nonsym): fixed declarations of i so
	they do not shadow each other

2003-05-30  Brian Gough  <bjg@network-theory.co.uk>

	* householder.c (gsl_linalg_householder_hv): converted to use blas
	routines

2003-05-08  Brian Gough  <bjg@network-theory.co.uk>
